# KetGrid

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  ai-context.md  prd.md
.github/workflows/: release.yml
.taskmaster/tasks/: tasks.json
crates/ketgrid-gui/: Cargo.toml
crates/ketgrid-gui/src/: app.rs  bloch.rs  circuit_view.rs  editor.rs  examples.rs  gate_palette.rs  history.rs  main.rs  state_view.rs  stats_panel.rs
crates/ketgrid-sim/: Cargo.toml
crates/ketgrid-sim/src/: lib.rs  simulator.rs  state_vector.rs
crates/ketgrid-sim/tests/: example_simulations.rs
docs/: bloch-sphere.md  circuit-data-model.md  circuit-renderer.md  circuit-statistics.md  debounced-simulation.md  drag-and-drop-placement.md  entanglement-visualization.md  example-circuits.md  example-library-browser.md  gate-context-menu.md  gate-matrices.md  gate-palette.md  index.md  keyboard-shortcuts.md  openqasm-export.md  openqasm-import.md  project-scaffolding.md  qiskit-export.md  state-vector-simulator.md  state-visualization.md  status-bar.md  step-through-mode.md  svg-export.md  undo-redo.md  wire-management.md
examples/: bell.ket.json  bernstein-vazirani.ket.json  bit-flip-code.ket.json  deutsch-jozsa.ket.json  ghz.ket.json  grover-2qubit.ket.json  hadamard.ket.json  pauli-x.ket.json  pauli-y.ket.json  pauli-z.ket.json  phase-flip-code.ket.json  phase-gate.ket.json  qft-3qubit.ket.json  rotation-gates.ket.json  shor-code.ket.json  simon-algorithm.ket.json  superdense-coding.ket.json  swap.ket.json  t-gate.ket.json  teleportation.ket.json  toffoli.ket.json
(+14 files in other folders)
