[workspace]
members = [
    "crates/ketgrid-core",
    "crates/ketgrid-sim",
    "crates/ketgrid-gui",
]
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33"
dirs = "5.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
