[package]
name = "ketgrid-gui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ketgrid"
path = "src/main.rs"

[dependencies]
ketgrid-core = { path = "../ketgrid-core" }
ketgrid-sim = { path = "../ketgrid-sim" }
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
egui_extras = { version = "0.31", features = ["svg", "image"] }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"
winapi = { version = "0.3", features = ["sysinfoapi"] }
