[package]
name = "ketgrid-sim"
version = "0.1.0"
edition = "2024"

[features]
default = []
quantrs2 = ["dep:quantrs2"]

[dependencies]
ketgrid-core = { path = "../ketgrid-core" }
nalgebra = { workspace = true }
rayon = { workspace = true }
quantrs2 = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
